      from the free dring build, but this will both give us an entry for the
      kernel in the status file, to prevent anna from doing bad things, and
      also will provide a System.map for depmod to run against, fixing
      builds on 2.6 kernels.
    - Removed the demo type.
    - Changed make demo and make shell to per-type targets.
    - Fixed the uml target similarly.
    - Remove broken and useless debian-installer-demo package.
      Closes: #218560
    - Add a debian-installer-manual package, mostly to serve as the autobilder
      sentinal package.

 -- Joey Hess <joeyh@debian.org>  Tue, 30 Mar 2004 16:24:08 -0500

debian-installer (20040330) unstable; urgency=low

  * Sven Luther
    - Added powerpc-builtin-initrd.sh script to build kernels with builtin
      initrd, and actually build the initrd builtin kernels for all targets
      except powerpc-small floppies.
    - Enabled powerpc/apus nativehd and cdrom-apus targets.
  * Joey Hess
    - Some manifest fixups.
  * Colin Watson
    - Add manifest info for powerpc.
    - Document netcfg/use_dhcp in boot-parameters.txt.
    - Bump kernel version in powerpc docs to 2.4.25.
  * Vincent Sanders
    - Add boot.init to netwinder netboot target
    - Add discover to ARM targets
    - Add Ext3 to apropriate ARM targets

 -- Joey Hess <joeyh@debian.org>  Tue, 30 Mar 2004 14:29:16 -0500

debian-installer (20040326) unstable; urgency=low

  * Sven Luther
    - Disabled powerpc-small/floppy/boot and boot-ofonly until miboot makes it
      to the archive.
    - added missing kernel-only/powerpc pkg-list.
  * Joey Hess
    - Remove irda-modules from the i386 net-drivers floppy, which
      was over size. Closes: #240192
    - Turn off powerpc-small build until it is fixed.

 -- Joey Hess <joeyh@debian.org>  Thu, 25 Mar 2004 23:35:29 -0500

debian-installer (20040325) unstable; urgency=low

  * Sven Luther
    - Added support for multiple powerpc kernel flavours/subarches.
  * Jeremie Koenig