@@ -36,7 +36,7 @@ SUITE = unstable
 DPKG_UNPACK_OPTIONS = --force-overwrite
 
 # The version of Debian targeted by the installation images.
-#DEBIAN_VERSION = 3.0
+#DEBIAN_VERSION = 3.1
 DEBIAN_VERSION = sarge
 
 # The date the installer is built.
@@ -48,6 +48,9 @@ INITRD_FS = ext2
 
 # What device to write floppies on
 FLOPPYDEV = /dev/fd0
+
+# What qemu to use, with any options.
+QEMU = qemu
 
 # media where images may be written to (via dd).
 WRITE_MEDIA = floppy
